Dual-license the code so that it complies with SoC 2006 guidelines. It is now under the terms of either the MIT or BSL licenses.
SVN-Revision: 5908

--- a/SOC/soc-import/boost/soc/2006/process/trunk/README
+++ b/SOC/soc-import/boost/soc/2006/process/trunk/README
@@ -15,9 +15,38 @@ libraries.  See http://www.boost.org/ for more information.
 This directory contains Boost.Process' source code and documentation.
 The rest of this document describes how to build them.
 
-This code is distributed under the terms of the Boost Software License
-version 1.0.  See the accompanying LICENSE_1_0.txt file for more
-details.
+
+License
+=======
+
+This code may be used under either of the following two licences:
+
+    Permission is hereby granted, free of charge, to any person
+    obtaining a copy of this software and associated documentation
+    files (the "Software"), to deal in the Software without
+    restriction, including without limitation the rights to use,
+    copy, modify, merge, publish, distribute, sublicense, and/or
+    sell copies of the Software, and to permit persons to whom the
+    Software is furnished to do so, subject to the following
+    conditions:
+
+    The above copyright notice and this permission notice shall be
+    included in all copies or substantial portions of the Software.
+
+    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+    OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+    NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+    HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+    WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+    FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+    OTHER DEALINGS IN THE SOFTWARE. OF SUCH DAMAGE.
+
+Or:
+
+    Distributed under the Boost Software License, Version 1.0.
+    (See accompanying file LICENSE_1_0.txt or copy at
+    http://www.boost.org/LICENSE_1_0.txt)
 
 
 Acknowledgements
