Further generalize node and cursor.
SVN-Revision: 6139

--- a/SOC/soc-import/boost/soc/2006/tree/trunk/TODO
+++ b/SOC/soc-import/boost/soc/2006/tree/trunk/TODO
@@ -1,2 +1,6 @@
+Proposal:
+* Cursor validity after insertion/erasure/clearing
+* balancers/augmentors for nary trees...
+
 Implement associative containers and priority_queue specialization using searcher
 Implement (binary) heap
