* binary_tree swap(), operator=() * Start balanced_tree implementation.
SVN-Revision: 6255

--- a/SOC/soc-import/boost/soc/2006/tree/trunk/TODO
+++ b/SOC/soc-import/boost/soc/2006/tree/trunk/TODO
@@ -14,5 +14,7 @@ original ones as policy argument to them? (e.g. red_black_tree is say
 
 * Concept checks.
 
+* Interoperability with BGL algorithms.
+
 Implement associative containers and priority_queue specialization using searcher
 Implement (binary) heap
