--- a/SOC/soc-import/boost/soc/2006/tree/trunk/TODO
+++ b/SOC/soc-import/boost/soc/2006/tree/trunk/TODO
@@ -1,10 +1,12 @@
 Proposal:
+
 * Add InputCursor requirements: binary cursor if it's a binary_tree member function, etc.
 * Cursor validity after insertion/erasure/clearing
 * modify parity/parent specs according to newsgroup thread, but add to binary_tree cursor!
 * possibly rename ascending to hierarchy cursor? (because of other uses for ascending/cursors in a graph context)
 * remove operator* requirement? (for upward-growing trees with data only on the bottom level --- like B+trees)
 * have erase() operations return cursor/iterator instead of void (as in new STD)
+* add tree lower_bound algorithm (to namespace inorder because it's somewhat inorder dependent? or is it?)
 
 Implementation:
 
@@ -22,5 +24,7 @@ original ones as policy argument to them? (e.g. red_black_tree is say
 
 * Interoperability with BGL algorithms.
 
-Implement associative containers and priority_queue specialization using searcher
-Implement (binary) heap
+Further applications:
+
+* Implement associative containers and priority_queue specialization using searcher
+* Implement (binary) heap
