--- a/SOC/2007/geometry/libs/hdstl/doc/latex/doxygen.sty
+++ b/SOC/2007/geometry/libs/hdstl/doc/latex/doxygen.sty
@@ -10,8 +10,8 @@
         {\fancyplain{}{\bfseries\rightmark}}
 \rhead[\fancyplain{}{\bfseries\leftmark}]
         {\fancyplain{}{\bfseries\thepage}}
-\rfoot[\fancyplain{}{\bfseries\scriptsize Generated on Mon Jun 11 02:25:33 2007 by Doxygen }]{}
-\lfoot[]{\fancyplain{}{\bfseries\scriptsize Generated on Mon Jun 11 02:25:33 2007 by Doxygen }}
+\rfoot[\fancyplain{}{\bfseries\scriptsize Generated on Tue Jun 12 01:53:57 2007 for HDSTL by Doxygen }]{}
+\lfoot[]{\fancyplain{}{\bfseries\scriptsize Generated on Tue Jun 12 01:53:57 2007 for HDSTL by Doxygen }}
 \cfoot{}
 \newenvironment{Code}
 {\footnotesize}
