Minor update. Remove dev/doxy (no longer needed, can apply doxygen filter directly).
SVN-Revision: 7039

--- a/SOC/2007/geometry/libs/hdstl/doc/latex/forwardhds.tex
+++ b/SOC/2007/geometry/libs/hdstl/doc/latex/forwardhds.tex
@@ -17,7 +17,7 @@ In addition to the valid expressions of the {\tt HDS} concept:\begin{itemize}
 \item {\tt next\_\-in\_\-facet(hds,h)} must return a value assignable to h.\item {\tt next\_\-at\_\-source(hds,h)} must return a value assignable to h.\item {\tt next\_\-at\_\-target(hds,h)} must return a value assignable to h.\end{itemize}
 \subsection{Expression Semantics}\label{forwardhds_refforwardhds7}
 In addition to the expression semantics of the {\tt HDS} concept:\begin{itemize}
-\item {\tt next\_\-in\_\-facet(hds,h)} returns a halfedge descriptor to the halfedge preceding {\tt h} in the adjacent facet cycle, when facet cycles are oriented in counter-clockwise order.\item {\tt next\_\-at\_\-source(hds,h)} returns a halfedge descriptor to the halfedge preceding {\tt h} around the source vertex of {\tt h}, when halfedges are ordered around a given vertex in clockwise order.\item {\tt next\_\-at\_\-target(hds,h)} returns a halfedge descriptor to the halfedge preceding {\tt h} around the target vertex of {\tt h}, when halfedges are ordered around a given vertex in clockwise order.\end{itemize}
+\item {\tt next\_\-in\_\-facet(hds,h)} returns a halfedge descriptor to the halfedge succeeding {\tt h} in the adjacent facet cycle, when facet cycles are oriented in counter-clockwise order.\item {\tt next\_\-at\_\-source(hds,h)} returns a halfedge descriptor to the halfedge succeeding {\tt h} around the source vertex of {\tt h}, when halfedges are ordered around a given vertex in clockwise order.\item {\tt next\_\-at\_\-target(hds,h)} returns a halfedge descriptor to the halfedge succeeding {\tt h} around the target vertex of {\tt h}, when halfedges are ordered around a given vertex in clockwise order.\end{itemize}
 \subsection{Complexity guarantees}\label{forwardhds_refforwardhds8}
 \begin{itemize}
 \item {\tt next\_\-in\_\-facet(hds,h)}: amortized constant time.\item {\tt next\_\-at\_\-source(hds,h)}: amortized constant time.\item {\tt next\_\-at\_\-target(hds,h)}: amortized constant time.\end{itemize}
