--- a/SOC/2007/geometry/libs/hdstl/doc/latex/pages.tex
+++ b/SOC/2007/geometry/libs/hdstl/doc/latex/pages.tex
@@ -2,8 +2,32 @@
 Here is a list of all related documentation pages:\begin{CompactList}
 \item \contentsline{section}{Backward HDS concept}{\pageref{backwardhds}}{}
 
+\item \contentsline{section}{Bidirectional HDS concept}{\pageref{bidirectionalhds}}{}
+
+\item \contentsline{section}{Facet HDS concept}{\pageref{facethds}}{}
+
+\item \contentsline{section}{Facet List HDS concept}{\pageref{facetlisthds}}{}
+
 \item \contentsline{section}{Forward HDS concept}{\pageref{forwardhds}}{}
 
+\item \contentsline{section}{Halfedge List HDS concept}{\pageref{halfedgelisthds}}{}
+
 \item \contentsline{section}{HDS concept definition}{\pageref{hdsconcept}}{}
+
+\item \contentsline{section}{Mutable Backward HDS concept}{\pageref{mutablebackwardhds}}{}
+
+\item \contentsline{section}{Mutable Bidirectional HDS concept}{\pageref{mutablebidirectionalhds}}{}
+
+\item \contentsline{section}{Mutable Facet HDS concept}{\pageref{mutablefacethds}}{}
+
+\item \contentsline{section}{Mutable Forward HDS concept}{\pageref{mutableforwardhds}}{}
+
+\item \contentsline{section}{Mutable HDS concept definition}{\pageref{mutablehdsconcept}}{}
+
+\item \contentsline{section}{Mutable Vertex HDS concept}{\pageref{mutablevertexhds}}{}
+
+\item \contentsline{section}{Vertex HDS concept}{\pageref{vertexhds}}{}
+
+\item \contentsline{section}{Vertex List HDS concept}{\pageref{vertexlisthds}}{}
 
 \end{CompactList}
